# auraton_cpp

./: .gitmodules  CMakeLists.txt  README.md  aurachip.cpp  aurachip.hpp  auraton.cpp  auraton.hpp  connection.cpp  device.hpp  example.cpp  parser.cpp  parser.hpp  parsers.uml
.github/workflows/: aurachip-test.yml  auraton-tests.yml  unit-tests.yml
lib/: CMakeLists.txt
lib/auralib/: CMakeLists.txt  aurachip.cpp  aurachip.hpp  command.cpp  command.hpp  connection.cpp  connection.hpp  device.cpp  device.hpp  parameter.cpp  parameter.hpp  parser.cpp  parser.hpp  timeout.hpp
lib/auralib/parser/: CMakeLists.txt  at.cpp  at.hpp  cmd_test.cpp  cmd_test.hpp  command.hpp  command_parser.cpp  parser_if.hpp  simple_token.cpp  simple_token.hpp  source.cpp  source.hpp  source_command.cpp  source_command.hpp  status.cpp  status.hpp
lib/auralib/parsers/: CMakeLists.txt  address.cpp  address.hpp  at.cpp  at.hpp  at_traverse.cpp  at_traverse.hpp  clear.cpp  clear.hpp  cmd_test.hpp  command.cpp  command.hpp  command_parser.cpp  command_parser.hpp  next_device_id.cpp  next_device_id.hpp  next_parameter.cpp  next_parameter.hpp  parser_executor.cpp  parser_executor.hpp  parser_if.hpp  simple_numeric.cpp  simple_numeric.hpp  simple_token.cpp  simple_token.hpp  simple_value.cpp  simple_value.hpp  source.hpp  source_command.hpp  specific_source.cpp  specific_source.hpp  token_traverse.cpp  token_traverse.hpp  version.cpp  version.hpp
lib/auralib/parsers/commands/: address.cpp  address.hpp  builder_if.hpp  device_id.cpp  device_id.hpp  device_list.cpp  device_list.hpp  device_parameter.cpp  device_parameter.hpp  specific_command.cpp  specific_command.hpp  test.cpp  test.hpp  version.cpp  version.hpp  xtal_correction.cpp  xtal_correction.hpp
lib/auralib/parsers/events/: direction.cpp  direction.hpp  event.cpp  event.hpp  link.cpp  link.hpp  specific_event.cpp  specific_event.hpp
lib/rs232lib/: CMakeLists.txt
tests/: CMakeLists.txt  aurachip_ut.cpp  command_ut.cpp  common.mk  connection_ut.cpp  device_ut.cpp  parameter_ut.cpp  parser_ut.cpp  status_parser_ut.cpp
tests/parsers/: CMakeLists.txt  address_ut.cpp  at_parser_ut.cpp  at_traverse_ut.cpp  clear_parser_ut.cpp  cmd_test_parser_ut.cpp  command_parser_ut.cpp  next_device_id_ut.cpp  next_parameter_ut.cpp  parser_executor_ut.cpp  simple_numeric_ut.cpp  simple_token_ut.cpp  source_command_parser_ut.cpp  source_parser_ut.cpp  specific_source_parser_ut.cpp  status_parser_ut.cpp  token_traverse_ut.cpp  version_ut.cpp
tests/parsers/commands/: CMakeLists.txt  cmd_address_ut.cpp  cmd_device_id_ut.cpp  cmd_device_list_ut.cpp  cmd_device_parameter_ut.cpp  cmd_test_ut.cpp  cmd_version_ut.cpp  cmd_xtal_correction_ut.cpp  specific_command_parser_ut.cpp
tests/parsers/events/: CMakeLists.txt  event_link_ut.cpp  specific_event_parser_ut.cpp
tests/stubs/: serialib.h  serialib_stub.cpp  timeout.hpp
